Test dependencies working.